--- a/.github/workflows/hello.yml
+++ b/.github/workflows/hello.yml
@@ -5,5 +5,7 @@ jobs:
     name: Hello world action
     runs-on: ubuntu-latest # useful environment to we can run a simple bash    
     steps:
-    - name: hello-world
-      run: echo "hello"
+      - name: hello-world
+        run: echo "hello $NAME"
+    env:
+        NAME: Pythrick
